--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server-dev": "nodemon server/index.js",
+    "seed": "node project-utils/seed.js"
   },
   "repository": {
     "type": "git",
@@ -18,14 +20,17 @@
   },
   "homepage": "https://github.com/gektin/max-descriptions#readme",
   "dependencies": {
-    "@prisma/client": "^2.7.1",
     "axios": "^0.20.0",
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
     "jest": "^26.4.2",
-    "nodemon": "^2.0.4"
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.4",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.7.1"
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5"
   }
 }
