--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "server-dev": "nodemon server/index.js",
     "seed": "node project-utils/seed.js"
   },
@@ -23,7 +23,7 @@
     "axios": "^0.20.0",
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
-    "jest": "^26.4.2",
+    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.4",
     "sequelize": "^6.3.5"
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5"
+    "@babel/preset-env": "^7.11.5",
+    "jest": "^26.4.2"
   }
 }
