--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.20.0",
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.4",
