--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack",
+    "react-dev": "webpack -d --watch",
     "seed": "node project-utils/seed.js",
     "server-dev": "nodemon server/index.js",
     "test": "jest --forceExit",
@@ -43,11 +44,11 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "css-loader": "^4.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "jest": "^26.4.2",
-    "postcss": "^8.1.1",
-    "postcss-loader": "^4.0.3",
-    "style-loader": "^1.3.0",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   }
