Conform imports to new file structure
I'm also deleting bundle.js here, so that we don't track it for gi
t. Running npm run build in the future should be sufficient when t
his code is checked out. I've added it to .gitignore as well.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server/index.js",
+  "jest": {
+    "setupFilesAfterEnv": ["<rootDir>/client/setupTests.js"]
+  },
   "scripts": {
     "build": "webpack",
     "react-dev": "webpack -d --watch",
