--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -44,10 +45,12 @@
     "@babel/preset-react": "^7.10.4",
     "babel-jest": "^26.5.2",
     "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^4.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.5.2",
     "mini-css-extract-plugin": "^1.0.0",
